--- a/templates/indexS.html
+++ b/templates/indexS.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+<script src="/static/js/indexS.js"></script>
 <title>   UNIVERSIDAD NACIONAL DE CHIMBORAZO   </title>
 <title>INGENIERÍA ELECTRÓNICA Y TELECOMUNICACIONES</title>
 <title>          DISPOSITIVOS EMBEBIDOS       </title>
