--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,12 @@
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
 <script src="/static/js/indexS.js"></script>
-<title> CONSULTORIO ODONTOLÓGICO SAN GREGORIO </title>
+<title> Calidad del Aire con IoT </title>
 </head>
 <body>
-
-<h1>  Monitoreo y Control de Calidad del Aire  </h1> 
+<h3>  Monitoreo y Control de Calidad del Aire  </h3> 
+<h3>  Consultorio Odontológico SAN GREGORIO  </h3> 
 <script src="/static/js/indexS2.js"></script>
-<p style="color:#000000 ; " ><b>Integrantes: Steven Andrés Faicán Paredes<b></p>
 <img src="/static/images/consultorioOdonto.png" alt="user">
 <p><h4>Temperatura:<h3 id="temp">--<h4>Humedad:<h3 id="hum">--</p>
 <h3>LECTURA DE GASES<h3 id="ppm">--</h3>
