--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <h3>  						 	      Consultorio Odontológico SAN GREGORIO  </h3> 
 <script src="/static/js/indexS2.js"></script>
 <img src="/static/images/consultorioOdonto.png" alt="user">
-<p><h4>Temperatura:<h3 id="temp"<h4>Humedad:<h3 id="hum"></p>
+<p><h4>Temperatura:<h3 id="temp">--<h4>Humedad:<h3 id="hum">--</p>
 <h3>LECTURA DE GASES<h3 id="ppm">--</h3>
 <h3>Historial de Sensores:</h3>
 <pre id="his"></pre>
