--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h3><center>Monitoreo y Control de Calidad del Aire  </h3> 
-<h3>  						 	      Consultorio Odontológico SAN GREGORIO  </h3> 
+<h3><center>Consultorio Odontológico SAN GREGORIO  </h3> 
 <script src="/static/js/indexS2.js"></script>
 <img src="/static/images/consultorioOdonto.png" alt="user">
 <p><h4>Temperatura:<h3 id="temp">--<h4>Humedad:<h3 id="hum">--</p>
