--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <title> Calidad del Aire con IoT </title>
 </head>
 <body>
-<h3><center>Monitoreo y Control de Calidad del Aire  </h3> 
+<h3><center><p style ="color:red;"> Monitoreo y Control de la Calidad del Aire </p>  </h3> 
 <h3><center>Consultorio Odontológico SAN GREGORIO  </h3> 
 <script src="/static/js/indexS2.js"></script>
 <img src="/static/images/consultorioOdonto.png" alt="user">
