--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 <title> Calidad del Aire con IoT </title>
 </head>
 <body>
-<h3><center><p style ="color:red;"> Monitoreo y Control de la Calidad del Aire </p>  </h3> 
-<h3><center>Consultorio Odontológico SAN GREGORIO  </h3> 
+<h3><center><p style ="color:red;"> Monitoreo y Control de la Calidad del Aire empleando tecnología IoT </p>  </h3> 
+<h3><center>Consultorio Odontológico SAN GREGORIO Quito-Ecuador</h3> 
 <script src="/static/js/indexS2.js"></script>
 <img src="/static/images/consultorioOdonto.png" alt="user">
 <p><h4>Temperatura:<h3 id="temp">--<h4>Humedad:<h3 id="hum">--</p>
-<h3>LECTURA DE GASES<h3 id="ppm">--</h3>
+<h3><p style="color:blue;"> LECTURA DE GASES</p><h3 id="ppm">--</h3>
 <h3>Historial de Sensores:</h3>
 <pre id="his"></pre>
 <script>
