--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <img src="/static/images/consultorioOdonto.png" alt="user">
 <p><h4>Temperatura:<h3 id="temp">--<h4>Humedad:<h3 id="hum">--</p>
 <h3><p style="color:blue;">GASES RELACIONADOS A LA CALIDAD DEL AIRE EN EL INTERIOR DEL CONSULTORIO ODONTOLÓGICO</p><h3 id="ppm">--</h3>
-<h3>Historial de Sensores:</h3>
+<h3>Historial de mediciones de los Sensores:</h3>
 <pre id="his"></pre>
 <script>
 /*
