--- a/templates/index.html
+++ b/templates/index.html
@@ -27,5 +27,6 @@ function LED1_Off(){
 */
 
 </script>
+<h2>http://controlaire.herokuapp.com/     Diseño elaborado por Andrés Faicán Paredes ©2022 </h2>
 </body>
 </html>
