--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@ function LED1_Off(){
 */
 
 </script>
-<h2>http://controlaire.herokuapp.com/     Diseño elaborado por Andrés Faicán Paredes ©2022 </h2>
+<h4> controlaire.herokuapp.com/ <center-right> Diseño elaborado por Andrés Faicán Paredes ©2022 </h4>
 </body>
 </html>
