--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@ function LED1_Off(){
 */
 
 </script>
-<h4> controlaire.herokuapp.com/ <right> Diseño elaborado por Andrés Faicán Paredes ©2022 </h4>
+<h4> controlaire.herokuapp.com/ </h4><h4><right> Diseño elaborado por Andrés Faicán Paredes ©2022 </h4>
 </body>
 </html>
