--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@ function LED1_Off(){
 */
 
 </script>
-<h4> controlaire.herokuapp.com/ <p <right> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h4>
+<h4> controlaire.herokuapp.com/ <p align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h4>
 </body>
 </html>
