--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,6 @@ function LED1_Off(){
 */
 
 </script>
-<h4><p  controlaire.herokuapp.com align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h4>
+<h5>controlaireapp.com <p align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h5>
 </body>
 </html>
