--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@ function LED1_Off(){
 */
 
 </script>
-<h5>controlaireapp.com <p align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h5>
+<h5><p align="right"> controlaire.app.com </p><p align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h5>
+<h5><p align="right"> Diseño elaborado por Andrés Faicán Paredes ©2022 </p></h5>
 </body>
 </html>
