--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,6 @@ function LED1_Off(){
 
 </script>
 <h5><p align="right"> controlaire.app.com ©2022</p><p align="right">Diseño elaborado por Andrés Faicán Paredes</p></h5>
-<h5><p align="right">stevandres123@gmail.com</p></h5>
+<h5><p align="right">email: stevandres123@gmail.com</p></h5>
 </body>
 </html>
